[Akshay/Devansh] #236077 fix for graph scale issue for Safari; fix for quadrant not visible after switching quadrants; fix search container sticky issue; remove opacity change on sub-nav hover

--- a/src/stylesheets/_search.scss
+++ b/src/stylesheets/_search.scss
@@ -50,7 +50,7 @@
       margin: 32px auto;
 
       &.sticky-offset {
-        margin-top: 124px;
+        margin-top: 92px;
       }
     }
 
@@ -58,7 +58,7 @@
       margin: 40px auto;
 
       &.sticky-offset {
-        margin-top: 140px;
+        margin-top: 100px;
       }
     }
 
